# Engineering_A_2023_C_Board_lqr

./: .cproject  .mxproject  .project  BoardConfig.h  CMakeLists.txt  Engineering_A_2023_C_Board.ioc  Engineering_A_2023_C_Board.xml  readme.md  sss.jscope  stm32f4discovery.cfg  stm32f4xx.cfg
Algorithm/Inc/: rmmotor.h
Algorithm/Src/: filter.c  pid.c  rmmotor.c
Bsp/: bsp_Motor_Encoder.c  bsp_Motor_Encoder.h
Bsp/Inc/: ECF_BspConfig.h  bsp_Distance_Sensor.h  bsp_Motor_Encoder.h  bsp_Power_Detect.h  bsp_can.h  bsp_dr16.h  bsp_pwm.h
Bsp/Src/: bsp_Distance_Sensor.c  bsp_Motor_Encoder.c  bsp_Power_Detect.c  bsp_Referee.c  bsp_buzzer.c  bsp_can.c  bsp_dr16.c  bsp_pwm.c  bsp_usb.c
Control/Inc/: AutoAction.h  BoardCommuni.h  GimbalMotor.h  RemoteDeal.h  SYSInit.h  rmmotor.h
Control/Src/: AutoAction.c  BoardCommuni.c  GimbalMotor.c  RemoteDeal.c  SYSInit.c  rmmotor.c
Core/Inc/: main.h  stm32f4xx_it.h
Core/Inc/Backup/: FreeRTOSConfig.h.bak  main.h.bak  stm32f4xx_hal_conf.h.bak  tim.h.bak
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
Core/Src/Backup/: can.c.bak  dma.c.bak  gpio.c.bak  main.c.bak  spi.c.bak  tim.c.bak  usart.c.bak  usb_otg.c.bak
MDK-ARM/: Engineering_A_2023_C_Board.uvguix.16771  Engineering_A_2023_C_Board.uvguix.17  Engineering_A_2023_C_Board.uvoptx  Engineering_A_2023_C_Board.uvprojx  JLinkLog.txt  startup_stm32f407xx.lst  startup_stm32f407xx.s
MDK-ARM/Engineering_A_2023_C_Board/: 1.jscope  Engineering_A_2023_C_Board.axf  Engineering_A_2023_C_Board.build_log.htm  Engineering_A_2023_C_Board.hex  Engineering_A_2023_C_Board.htm  Engineering_A_2023_C_Board.lnp  Engineering_A_2023_C_Board.map  Engineering_A_2023_C_Board_Engineering_A_2023_C_Board.dep  bmi088driver.crf  bmi088driver.d  bmi088middleware.crf  bmi088middleware.d  boardcommuni.crf  boardcommuni.d  boardcommuni_task.crf  boardcommuni_task.d  bsp_buzzer.crf  bsp_buzzer.d  bsp_can.crf  bsp_can.d  bsp_can_fifo.crf  bsp_can_fifo.d  bsp_distance_sensor.crf  bsp_distance_sensor.d  bsp_dr16.crf  bsp_dr16.d  bsp_dwt.crf  bsp_dwt.d  bsp_motor_encoder.crf  bsp_motor_encoder.d  bsp_power_detect.crf  bsp_power_detect.d  bsp_pwm.crf  bsp_pwm.d  bsp_pwm_1.crf  bsp_pwm_1.d  bsp_referee.d  bsp_usb.d  can.crf  can.d  (+150 more)
MDK-ARM/RTE/_Engineering_A_2023_C_Board/: RTE_Components.h
Task/Inc/: BoardCommuni_Task.h  Detect_Task.h  Gimbal_Fsm.h  Gimbal_Task.h  fsm.h
Task/Src/: BoardCommuni_Task.c  Detect_Task.c  Gimbal_Fsm.c  Gimbal_Task.c  Remote_Task.c  fsm.c
